# pyoxidizer_filter_include_issue

./: .gitignore  Cargo.toml  README.md  pyoxidizer.bzl
dump-modules/: modules-1fdf674b-1f1c-4de8-b825-3439954c91dc
py_src/test_package/: __main__.py  core.py
pyembed/: Cargo.toml  build.rs
